--- a/bytegr.candidates.manager.data/bytegr.candidates.manager.data.csproj
+++ b/bytegr.candidates.manager.data/bytegr.candidates.manager.data.csproj
@@ -22,4 +22,8 @@
     <Folder Include="DbSeeds\" />
     <Folder Include="Entities\Common\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
+  </ItemGroup>
 </Project>
