--- a/bytegr.candidates.manager.web/bytegr.candidates.manager.web.csproj
+++ b/bytegr.candidates.manager.web/bytegr.candidates.manager.web.csproj
@@ -6,4 +6,25 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\bytegr.candidates.manager.data\bytegr.candidates.manager.data.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Profiles\" />
+    <None Remove="Views\Candidate\" />
+    <None Remove="Views\Degree\" />
+    <None Remove="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Profiles\" />
+    <Folder Include="Views\Candidate\" />
+    <Folder Include="Views\Degree\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
