bytegr.candidates.manager - web (changes and fixes)
some functions need further implementation

--- a/bytegr.candidates.manager.data/bytegr.candidates.manager.data.csproj
+++ b/bytegr.candidates.manager.data/bytegr.candidates.manager.data.csproj
@@ -15,6 +15,7 @@
     <None Remove="Entities\Common\" />
     <None Remove="Common\" />
     <None Remove="Common\Extensions\" />
+    <None Remove="Dtos\Common\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
@@ -25,6 +26,7 @@
     <Folder Include="Entities\Common\" />
     <Folder Include="Common\" />
     <Folder Include="Common\Extensions\" />
+    <Folder Include="Dtos\Common\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
