--- a/bytegr.candidates.manager.data/bytegr.candidates.manager.data.csproj
+++ b/bytegr.candidates.manager.data/bytegr.candidates.manager.data.csproj
@@ -33,5 +33,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
+    <PackageReference Include="Effort.EF6" Version="2.2.17" />
   </ItemGroup>
 </Project>
